assets/styles/pages/landing: fix FAQ icon size issues on mobile

--- a/assets/styles/pages/landing.scss
+++ b/assets/styles/pages/landing.scss
@@ -416,12 +416,16 @@
 	}
 
 	&__summary {
-		@include flex(row, center, center, nowrap, 1.5rem);
+		@include flex(row, center, center, nowrap, 0.8rem);
+
+		@include tablet {
+			gap: 1.5rem;
+		}
 	}
 
 	&__summary-icon-wrapper {
-		width: 3rem;
-		height: 3rem;
+		min-width: 3rem;
+		min-height: 3rem;
 		padding: 0.5rem;
 		border-radius: 0.75rem;
 		border: 2px solid $primary-50;
@@ -439,8 +443,12 @@
 	}
 
 	&__summary-arrow {
-		margin-left: auto;
+		margin: 0rem 0.25rem 0rem auto;
 		font-size: 1.5rem;
+
+		@include tablet {
+			margin-right: 0rem;
+		}
 	}
 
 	&__text {
